--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,22 @@
-Brotli==1.1.0
-certifi==2025.1.31
+certifi==2025.4.26
 chardet==5.2.0
-charset-normalizer==3.4.1
-click==8.1.8
+charset-normalizer==3.4.2
 colorama==0.4.6
 et_xmlfile==2.0.0
 idna==3.10
-markdown2==2.5.3
-MarkupSafe==3.0.2
-minijinja==2.9.0
-numpy==2.2.3
+numpy==2.2.2
+opencv-python==4.11.0.86
 openpyxl==3.1.5
-packaging==24.2
+packaging==25.0
 pandas==2.2.3
+pillow==11.1.0
 python-dateutil==2.9.0.post0
-pytz==2025.1
-PyYAML==6.0.2
+pytz==2025.2
 requests==2.32.3
+scipy==1.15.3
+sewar==0.4.6
 six==1.17.0
 tqdm==4.67.1
-tzdata==2025.1
+tzdata==2025.2
 urllib3==2.4.0
-uv==0.6.14
+uv==0.7.3
